TEST_PROGRAMS/VALID/05/underscore_id.go
/* Underscore Id. */

package main

var _ int

func main() {
	a := 1
	_ = 1

	_ += 1

	b := _
	_ >>= _

	_
}
