TEST_PROGRAMS/INVALID/09/blank_conversion.go
package blank_conversion

func main() {
    a := int(_)
}
